eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"  # Dành cho gRPC
spec:
  ingressClassName: nginx
  rules:
    - host: api.hoaianh1033.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-bank-api-service     # HTTP service (port 80)
                port:
                  number: 80
          - path: /grpc
            pathType: Prefix
            backend:
              service:
                name: simple-bank-grpc-service     # GRPC service (port 9090)
                port:
                  number: 9090
  tls:
    - hosts:
        - api.hoaianh1033.com
      secretName: simple-bank-api-cert
